--- a/sass/top.scss
+++ b/sass/top.scss
@@ -1,3 +1,432 @@
-body {
-  display: block;
+.top-Hero_block {
+  background-image: url(../../assets/images/bg_hero.png);
+  background-size: cover;
+  height: 767px;
+  margin-bottom: 8%;
+  @media(max-width: 760px) {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+  }
+  .top-Hero_container {
+    @media(max-width: 760px) {
+      padding: 0 20px;
+      text-align: left;
+    }
+    .hero-Heading {
+      padding-top: 20%;
+      color: #fff;
+      @media(max-width: 760px) {
+        padding-top: 0;
+      }     
+      .hero-Title {
+        font-size: 72px;
+        font-weight: bold;
+        padding-bottom: 2%;
+        @media(max-width: 760px) {
+          font-size: 40px;
+          padding-bottom: 30px;
+        }
+      }
+      .hero-Subtitle {
+        font-size: 24px;
+        letter-spacing: 2px;
+        padding-bottom: 4%;
+        @media(max-width: 760px) {
+          padding-bottom: 30px;
+          letter-spacing: 0.1rem;
+        }
+        .sp-Line {
+          display: none;
+          @media(max-width: 760px) {
+            display: block;
+          }
+        }
+      }
+    }
+    .hero-Contact_btn {
+      margin: 0 auto;
+      border: 1px solid #fff;
+      padding: 15px 30px;
+      border-radius: 40px;
+      width: 220px;
+      @media(max-width: 760px) {
+        text-align: left;
+        margin: 0;
+      }
+    }
+    .hero-Scroll {
+      color: #fff;
+      font-size: 12px;
+      padding-left: 95%;
+      padding-top:8%;
+      letter-spacing: 2px;
+      writing-mode: vertical-rl;
+      display: block;
+      @media(max-width:760px) {
+        position: absolute;
+        display: inline-block;
+        top: 75%;
+        left: 92%;
+        padding: 0;
+      }
+      &::after {
+        position: absolute;
+        bottom: -8%;
+        left: 95.5%;
+        width: 1.2px;
+        height: 60px;
+        background: #fff;
+        content: "";
+        animation: scrollDownLine 1.5s infinite;
+        @media(max-width: 760px) {
+        }
+        @keyframes scrollDownLine {
+          from {
+            height: 12%;
+            @media(max-width: 760px) {
+              height: 100%;
+            }
+          }
+          to {
+            height: 0%;
+          }
+        }
+      }
+    }
+  }
+}
+
+.main {
+  max-width: 1440px;
+  .news-Block {
+    margin: 0 auto;
+    margin-bottom: 8%;
+    max-width: 917px;
+    @media(max-width: 760px) {
+      margin-bottom: 40px;
+      padding: 0 20px;
+    }
+    .news-Container {
+      display: flex;
+      justify-content: space-around;
+      @media(max-width: 760px) {
+        display: block;
+      }
+      .news-Heading {
+        .news-Title {
+          &::after {
+            content: "お知らせ";
+            font-size: 13px;
+            font-weight: normal;
+            display: block;
+            text-align: left;
+            padding-top: 8px;
+            @media(max-width: 760px) {
+              text-align: center;
+            }
+          }
+        }
+      }
+      .news-Contents_area {
+        @media(max-width: 760px) {
+          margin-top: 30px;
+        }
+        .news-Content {
+          display: flex;
+          align-items: center;
+          padding-bottom: 20px;
+          @media(max-width: 760px) {
+            display: block;
+            padding-bottom: 40px;
+          }
+          .news-Content_list {
+            display: flex;
+            .news-Time {
+              font-size: 15px;
+            }
+            .news-Label {
+              background: #E8E8E8;
+              padding: 2px 10px;
+              border-radius: 20px;
+              margin: 0 12px;
+              width: 80px;
+              font-size: 0.75rem;
+              font-weight: bold;
+              @media(max-width: 760px) {
+                font-weight: normal;
+                font-size: 11px;
+              }
+            }
+          }
+          .news-Text {
+            @media(max-width: 760px) {
+              text-align: justify;
+              margin-top: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .service-Block {
+    margin: 0 auto;
+    margin-bottom: 14%;
+    max-width: 917px;
+    @media(max-width: 760px) {
+      padding: 0 20px;
+    }
+    .service-Container {
+      .service-Heading {
+        margin-bottom: 4%;
+        .service-Title {
+          &::after {
+            content: "事業内容";
+            font-size: 13px;
+            font-weight: normal;
+            display: block;
+            padding-top: 8px;
+          }
+        }
+      }
+      .service-Area {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 30px;
+        @media(max-width: 760px) {
+          display: block;
+        }
+        .service-Content {
+          max-width: 350px;
+          margin-right: 30px;
+          @media(max-width: 760px) {
+            margin: 0 0 40px 0;
+          }
+          &:last-child {
+            margin-right: 0;
+          }
+          .img {
+            width: 100%;
+            height: auto;
+          }
+          .service-Name {
+            font-size: 18px;
+            font-weight: bold;
+            padding: 30px 0;
+            @media(max-width: 760px) {
+              padding: 15px 0;
+            }
+          }
+          .service-Text {
+            font-size: 0.9375rem;
+            font-family: "Montserrat", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+            text-align: left;
+            line-height: 1.8;
+          }
+        }
+      }
+    }
+  }
+
+  .works-Block {
+    max-width: 1260px;
+    margin: 0 auto;
+    margin-bottom: 10%;
+    .works-Container {
+      .works-Inner {
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding: 80px 20px;
+        @media(max-width: 760px) {
+          padding: 0;
+          flex-direction: column;
+        }
+        &::after {
+          content: '';
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 60%;
+          height: 100%;
+          background: #F0F0F0;
+          @media(max-width: 760px) {
+            width: 100%;
+          }
+        }
+        .works-Img_area {
+          max-width: 750px;
+          max-height: 510px;
+          @media(max-width: 760px) {
+            width: 100%;
+            height: auto;
+          }
+          .swiper-pagination {
+            --swiper-theme-color: #391E88;
+            text-align: right;
+          }
+          .swiper-button-prev,
+          .swiper-button-next {
+            --swiper-navigation-color: #391E88;
+            font-weight: 900;
+            --swiper-navigation-size: 28px;
+          }   
+        }
+        .works-Text_area {
+          padding-left: 40px;
+          z-index: 10;
+          @media(max-width: 760px) {
+            padding: 60px 30px;
+          }
+          .works-Heading {
+            margin-bottom: 4%;
+            .works-Title {
+              &::after {
+                content: "制作実績";
+                font-size: 13px;
+                font-weight: normal;
+                display: block;
+                padding-top: 8px;
+              }
+            }
+          }
+          .works-text {
+            max-width: 400px;
+            margin-bottom: 8%;
+            font-family: "Montserrat", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+            line-height: 1.8;
+            color: #333;
+            letter-spacing: 0.05em;
+            font-size: 0.9375rem;
+          }
+        }
+      }
+    }
+  }
+
+  .company-Block {
+    max-width: 1300px;
+    background-image: url(../../assets/images/bg_company.png);
+    background-size: cover;
+    background-position: center center, center center;
+    margin-bottom: 8%;
+    @media(max-width: 760px) {
+      background-image: url(../../assets/images/sp_bg-circle.png);
+      background-position: bottom;
+      background-size: 375px;
+      margin-bottom: 80px;
+    }
+    .company-Container {
+      .company-Heading {
+        margin-bottom: 2%;
+        .company-Title {
+          &::after {
+            content: "私たちについて";
+            font-size: 13px;
+            font-weight: normal;
+            display: block;
+            padding-top: 8px;
+          }
+        }
+      }
+      .company-Message {
+        font-size: 40px;
+        letter-spacing: 2px;
+        margin-bottom: 40px;
+        @media(max-width: 760px) {
+          font-size: 32px;
+        }
+        .company-Message_text {
+          background: linear-gradient(transparent 70%, #f5f534 0%);
+        }
+      }
+      .company-Text_area {
+        max-width: 450px;
+        margin: 0 auto;
+        margin-bottom: 40px;
+        letter-spacing: 1px;
+        line-height: 30px;
+        @media(max-width: 760px) {
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+
+  .recruit-Block {
+    max-width: 1110px;
+    margin: 0 auto;
+    margin-bottom: 8%;
+    .recruit-Container {
+      .recruit-Inner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @media(max-width: 760px) {
+          flex-direction: column-reverse;
+        }
+        .recruit-Heading {
+          max-width: 445px;
+          background: #F7F7F7;
+          padding: 70px 100px;
+          @media(max-width: 760px) {
+            padding: 70px 89px;
+          }
+          .recruit-Title {
+            &::after {
+              content: "採用情報";
+              font-size: 13px;
+              font-weight: normal;
+              display: block;
+              padding-top: 8px;
+            }
+          }
+          .recruit-Text {
+            margin: 20px 0;
+          }
+        }
+        .recruit-Img_area {
+          @media(max-width: 760px) {
+            img {
+              width: 100%;
+              height: auto;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .contact-Block {
+    background: #F7F7F7;
+    padding: 70px 0;
+    margin: 0 auto;
+    .contact-Container {
+      .contact-Heading {
+        .contact-Title {
+          &::after {
+            content: "お問い合わせ";
+            font-size: 13px;
+            font-weight: normal;
+            display: block;
+            padding-top: 8px;
+          }
+        }
+        .contact-Text {
+          font-family: "Montserrat", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+          line-height: 1.8;
+          color: #333;
+          letter-spacing: 0.05em;
+          font-size: 0.9375rem;
+          padding: 40px 0;
+          @media(max-width: 760px) {
+            padding: 30px 0;
+          }
+        }
+      }
+    }
+  }
 }
